--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-icons": "^3.0.0",
+    "@types/react-modal": "^3.10.0",
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
+    "react-modal": "^3.11.1",
     "react-scripts": "3.2.0",
     "typescript": "3.7.2"
   },
