--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
   "name": "contacts",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
+  "engines": {
+    "node": ">=20"
+  },
   "dependencies": {
-    "@types/jest": "24.0.22",
-    "@types/lodash": "^4.14.146",
-    "@types/node": "12.12.7",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
-    "@types/react-icons": "^3.0.0",
-    "@types/react-modal": "^3.10.0",
-    "lodash": "^4.17.15",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-icons": "^3.8.0",
-    "react-modal": "^3.11.1",
-    "react-scripts": "3.2.0",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.0.0",
+    "react-modal": "^3.16.1",
+    "react-scripts": "5.0.1",
     "typescript": "3.7.2"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.195",
+    "@types/node": "20.3.1",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "@types/react-modal": "^3.16.0",
+    "craco-mf": "^1.0.0",
+    "gh-pages": "3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "craco build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:rs": "react-scripts build",
+    "craco:start": "craco start"
   },
   "eslintConfig": {
     "extends": "react-app"
