--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "contacts",
+  "homepage": "https://pcmunoz.github.io/contacts/",
   "version": "0.1.1",
   "private": true,
   "engines": {
@@ -26,7 +27,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "craco build",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:rs": "react-scripts build",
