--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "3.7.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/lodash": "^4.14.195",
     "@types/node": "20.3.1",
     "@types/react": "18.2.0",
