--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build:rs": "react-scripts build",
     "craco:start": "craco start"
   },
