--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
+    "@craco/types": "^7.1.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "20.3.1",
     "@types/react": "18.2.0",
