--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,12 @@ jobs:
         with:
           node-version: "20.3.0"
 
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+      - name: clean cache
+        run: npm cache clean --force
+      - name: install
+        run: npm ci
+      - name: npm install
+        run: npm install
 
       - name: Build project
         run: npm run build
