--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@craco/craco": "7.1.0",
-    "@craco/types": "7.1.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "20.3.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/react-modal": "^3.16.0",
-    "gh-pages": "3.1.0"
+    "customize-cra": "1.0.0",
+    "gh-pages": "3.1.0",
+    "react-app-rewired": "2.2.1",
+    "webpack": "5.88.0"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build:rs": "react-scripts build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
