--- a/package.json
+++ b/package.json
@@ -22,14 +22,12 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "@types/react-modal": "^3.16.0",
-    "customize-cra": "1.0.0",
-    "gh-pages": "3.1.0",
-    "react-app-rewired": "2.2.1",
-    "webpack": "5.88.0"
+    "craco-mf": "^1.0.0",
+    "gh-pages": "3.1.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "start": "craco start",
+    "build": "craco build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
